--- a/book_app/templates/review.html
+++ b/book_app/templates/review.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block main_body %}
-<form method="POST" action="/reviewupdate">
+<form method="POST" action="/review">
   <input name="name" style="margin-bottom:10px" class="form-control" type="text" placeholder="책 이름은 무엇인가요?">
   <input name="w_review" style="margin-bottom:20px" class="form-control" type="text" placeholder="이 책에서 기억하고 싶은 구절을 적어보세요.">
 
