--- a/book_app/templates/review2.html
+++ b/book_app/templates/review2.html
@@ -17,7 +17,7 @@ Review 수정 📝
 {% endblock %}
 
 {% block main_body %}
-<form method="POST" action="/review">
+<form method="POST" action="/reviewupdate/">
   <input name="name" style="margin-bottom:10px" class="form-control" type="text" placeholder="책 이름 수정">
   <input name="w_review" style="margin-bottom:20px" class="form-control" type="text" placeholder="구절 수정">
 
